# QFilmScanner

./: .gitignore  CMakeLists.txt  README.md  build.sh  resources.qrc
docs/: SUPPORTED.md
src/: AspectRatioLabel.h  MainWindow.cpp  MainWindow.h  ScanWorker.cpp  ScanWorker.h  main.cpp
src/device_quirks/: scanProfiles.h
src/workers/: ImageWorker.cpp  ImageWorker.h  ScanWorker.cpp  ScanWorker.h
